# llm_from_zero_to_one

./: .gitignore  demo_args.py  main.py  pyproject.toml
.trae/rules/: code.md
.trae/skills/code-reviewer/: SKILL.md
configs/: pretrain.yaml  pretrain_megatron_example.yaml  pretrain_padding_example.yaml
data/: padding_dataset.py
dataset/: __init__.py  dataset_factory.py  padding_dataset.py
dataset/simple_megatron_dataset/: __init__.py  index_dataset.py  simple_dataset.py
gpt2/: data.py  model.py  preprocess_data.py  test_data.py  train.py
logger/: __init__.py
models/: __init__.py  base.py  common_module.py  model_factory.py  registry.py
models/gpt2/: __init__.py  config.py  model.py
tests/: test_args.py  test_checkpoint_manager.py  test_logger.py  test_models.py  test_padding_dataset.py  test_pretrain_trainer.py
tools/: check_idx.py  llm_data_processor.py
trainer/: __init__.py  model_factory.py  train.py  train_args.py
trainer/checkpoint_manager/: __init__.py  checkpoint_manager.py
trainer/pretrain/: __init__.py  pretrain.py
util/: __init__.py  dtype.py
