[project]
name = "llm-from-zero-to-one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.6.1",
    "jaxtyping>=0.3.7",
    "modelscope[full]>=1.35.0",
    "numpy>=2.2.6",
    "oss2>=2.19.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["logger*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# 忽略 jaxtyping 语法导致的 F722 错误
ignore = ["F722"]
